package net.nemerosa.ontrack.extension.scm.catalog

data class SCMCatalogSource(
        val config: String,
        val repository: String,
        val repositoryPage: String?
)
